// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`able to get user profile 1`] = `
Object {
  "data": Object {
    "Me": Object {
      "email": "test@user.com",
      "name": "Test User",
    },
  },
}
`;

exports[`able to update user password successfully 1`] = `
Object {
  "data": Object {
    "UpdateUser": Object {
      "email": "test@user.com",
      "name": "Test User",
    },
  },
}
`;

exports[`able to update user profile successfully 1`] = `
Object {
  "data": Object {
    "UpdateUser": Object {
      "email": "updated+user@test.com",
      "name": "Test User",
    },
  },
}
`;
